# python-sanic-template

./: .gitignore  Jenkinsfile  Makefile  README.md  config_dev.toml  dockerfile  pyproject.toml
app/: __init__.py  main.py
app/controller/: checkController.py
app/controller_ws/: checkWS.py
